<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rentongo</string>
    <string name="action_settings">Settings</string>

    <!-- confirmation screen -->
    <string name="confirm_text1">Rentongo app would like to</string>
    <string name="confirm_text2">use your current location.</string>
    <string name="confirm_ok">OK</string>

    <!-- internet screen -->
    <string name="error_connecting">Error connecting</string>
    <string name="internet_screen1">Please make sure you have an \n internet connection and try again.</string>
    <string name="internet_ok">OK</string>
    <string name="internet_try">Try Again</string>
    <!-- screen name -->
    <string name="booking_verification">Booking Verification</string>
    <string name="bike_details">Bike Details</string>

    <!-- search screen -->
    <string name="search_ride">Search Ride</string>
    <string name="how_it_works">How it Works</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="about_rentongo">About Rentongo</string>
    <string name="share">Share</string>

    <!-- login screen -->
    <string name="login_text1">Welcome back!</string>
    <string name="login_text2">Please fill in your details to \nlogin your account</string>
    <string name="login_text3">login your account</string>
    <string name="login_hint_phone">Phone Number</string>
    <string name="login_hint_password">Password</string>
    <string name="login">Log In</string>
    <string name="login_forgot_pass">Forgot Password?</string>
    <string name="login_signup">New User? <a href="www.rentongo.com">Sign up!</a></string>

    <!-- dialoge failed registration -->
    <string name="registration_failed">Registration Failed</string>
    <string name="reg_text1">Phone number already exist.</string>
    <string name="reg_text2">Choose other phone number</string>
    <string name="reg_ok">OK</string>

    <!-- dialoge forgot password -->
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_text1">It happens to all of us once in a while. Just enter your registered Phone number below and press Reset Password. We will send you instruction to set a new password.</string>
    <string name="forgot_password_phone_hint">Phone Number</string>
    <string name="forgot_password_reset_password">Reset Password</string>
    <string name="forgot_password_cancle">Cancle</string>

    <!-- dialoge successful sign -->
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_text1">Welcome to RentOnGo APP!</string>
    <string name="congratulations_text2">You have successfully registered \n an account with us</string>
    <string name="congratulations_text3">Explore the App</string>

    <!-- fragment bike details -->
    <string name="bike_details_view_map">View on Map</string>
    <string name="bike_details_rental_charges">Rental Charges</string>
    <string name="bike_details_security_deposite">Security Deposit</string>
    <string name="bike_details_vendor_review">Vendor Review</string>
    <string name="bike_details_product_descripton">Product Description</string>
    <string name="bike_details_book_my_ride">Book My Ride</string>
    <!-- fragment booking verification -->
    <string name="booking_verification_amount_to_pay">Amount To Pay</string>
    <string name="booking_verification_payable_amount">Payable Amount</string>
    <string name="booking_verification_text1">Refundable Security Deposite of Rs. 5000 would need to be directly paid in Case at time of bike pickup</string>
    <string name="booking_verification_text2">Please note the vendor location for pick-up:</string>
    <string name="booking_verification_term_condition">I accept the</string>
    <string name="booking_verification_term_condition1"><a href="www.rentongo.com">Term and Conditions</a></string>
    <string name="booking_verification_payment">Proceed to Payment</string>
    <!-- fragment payment failure -->
    <string name="payment_failure_text">Transaction processing failure.\nThe remote servers response\nreported an error.</string>
    <string name="payment_failure_retry_tras">Retry Transaction</string>

    <!-- fragment payment success -->
    <string name="payment_success_text1">Thanks for making the payment.\nYour order is #</string>
    <string name="payment_success_text2">You can track the order status by clicking \n the Track Order button.</string>
    <string name="payment_success_text3">In case of any queries/concerns, please \n contact Rentongo help desk:</string>
    <string name="payment_success_phone">+91 9986808666</string>
    <string name="payment_success_happy_rating">Happy Renting!</string>
    <string name="payment_success_password_hint">Password</string>
    <string name="payment_success_track_order">Track Order</string>
    <string name="payment_sucsess_make_another">Make Another Transaction</string>

    <!-- fragment search ride -->
    <string name="search_ride_location">Your Location</string>
    <string name="search_ride_location_hint">Enter Your Location Here</string>
    <string name="search_ride_from">From</string>
    <string name="search_ride_to">To</string>
    <string name="search_ride_motorbikes">Motorbikes</string>
    <string name="search_ride_scooters">Scooters</string>
    <string name="search_ride_bicycles">Bicycles</string>

    <!-- fragment searching -->
    <string name="searching_text1">Searching Motorbikes and Scooters in</string>
    <string name="searching_from">From</string>
    <string name="searching_to">To</string>
    <string name="searching_text2">We are searching your ride.\nOur prices are worth the wait....</string>

    <!-- fragment signup -->
    <string name="sign_up_text1">Hi, there!</string>
    <string name="sign_up_text2">Please fill in  your details \n to become a registered user at Rentongo</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_phone">Phone Number</string>
    <string name="sign_up_email">E-mail address</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_pass">Confirm Password</string>
    <string name="sign_up">Sign Up</string>

    <!-- fragment user details -->
    <string name="user_details_text1">Already a User?</string>
    <string name="user_details_login_now"><a href="login_now">Login Now.</a></string>
    <string name="user_details_guest">Continue As Guest</string>
    <string name="user_details_name">Name</string>
    <string name="user_details_phone_number">Phone Number</string>
    <string name="user_details_email_add">E-mail address</string>
    <string name="user_details_continue">Continue</string>
    <string name="user_details_signup_now"><a href="sign_up">Signup Now!</a></string>

</resources>