<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/sign_up_text1"
        android:textColor="@color/notification_baf_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtSignUp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/sign_up_text2"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/signup_panel"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtSignUpName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="20dp"
            android:hint="@string/sign_up_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_devider" />

        <EditText
            android:id="@+id/edtSignUPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/phone_icon"
            android:drawablePadding="20dp"
            android:hint="@string/sign_up_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_devider" />

        <EditText
            android:id="@+id/edtSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="20dp"
            android:hint="@string/sign_up_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_devider" />

        <EditText
            android:id="@+id/edtSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/password_icon_login"
            android:drawablePadding="20dp"
            android:hint="@string/sign_up_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_devider" />

        <EditText
            android:id="@+id/edtSignUpConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/password_icon_login"
            android:drawablePadding="20dp"
            android:hint="@string/sign_up_confirm_pass"
            android:inputType="textPassword"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

</LinearLayout>