<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/forgot_password_panel"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtForgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forget_password_devider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text1"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edtForgotPassPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/forgot_password_phone"
            android:drawablePadding="20dp"
            android:hint="@string/forgot_password_phone_hint"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnForgotPasswordResetPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/forgot_password_reset"
                android:gravity="center"
                android:text="@string/forgot_password_reset_password"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnForgotPasswordCancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/forgot_password_cancle"
                android:gravity="center"
                android:text="@string/forgot_password_cancle"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>