<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/login_text1"
        android:textColor="@color/notification_baf_color"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogin1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_text2"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/levelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/level_login"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/phone_icon_login" />

            <EditText
                android:id="@+id/edtLoginPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/login_hint_phone"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/devider_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/password_icon_login" />

            <EditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/levelLogin"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignRight="@+id/btnLogin"
        android:layout_below="@+id/btnLogin" >

        <TextView
            android:id="@+id/txtLoginForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login_forgot_pass"
            android:textColor="@color/notification_baf_color" />

        <TextView
            android:id="@+id/txtLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:autoLink="web"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/login_signup"
            android:textColor="@color/notification_baf_color"
            android:textColorLink="@color/notification_baf_color" />
    </RelativeLayout>

</RelativeLayout>