<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/failed_reg_panel"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtFailedRegTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/registration_failed"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/failed_reg_devider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/failed_reg_icon" />

        <TextView
            android:id="@+id/txtFaiedReg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/reg_text1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFaiedReg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reg_text2"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUpFailDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/failed_reg_ok"
            android:gravity="center"
            android:text="@string/reg_ok"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>