<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/successful_sign_up_panel"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtSuccessfulTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/successful_sign_up_devider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/successfull_sign_up_icon" />

        <TextView
            android:id="@+id/txtSuccessSign1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/congratulations_text1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSuccessSign2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/congratulations_text2"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/btnSuccessfullSignUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/successful_sign_explore"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtBtnSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/congratulations_text3"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>